# offline-video-streaming-application

./: .env  .gitignore  components.json  package.json  pnpm-lock.yaml  vite.config.ts
src/: App.tsx
src-tauri/: Cargo.toml  TODO.md  diesel.toml  tauri.conf.json
src-tauri/database/: local.db  local.json
src-tauri/migrations/2024-06-29-135205_courses/: down.sql  up.sql
src-tauri/src/: connect.rs  lib.rs  main.rs
src-tauri/src/model/: mod.rs  models.rs  schema.rs
src-tauri/src/services/: app.rs  courses.rs  mod.rs  system.rs  transport.rs
src/components/: command-menu.tsx  icons.tsx
src/components/general/: index.tsx
src/components/headers/: main-app-header.tsx
src/components/sidebar/: course-sidebar.tsx  index.ts  sidebar-fallback.tsx
src/components/video/: fallback.tsx  video-player.tsx
src/config/: app.config.ts  course.config.ts
src/layouts/: main.layout.tsx
src/routes/: routes.tsx
src/screens/: course.id.screen.tsx  courses.screen.tsx  dashboard.screen.tsx  history.screen.tsx  progress.screen.tsx  setting.screen.tsx
src/types/: course.ts  index.d.ts  player.ts
