[package]
name = "offline-video-streaming-application"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
diesel = { version = "2.2.1", features = ["chrono", "sqlite"] }
chrono = { version = "0.4.38", features = ["serde"] }
dotenv = "0.15.0"
sysinfo = "0.30.12"
reqwest = "0.12.5"
rustc-serialize = "0.3.25"
dirs = "5.0.1"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[tests]
path = ["./src/tests"]
